--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,7 @@
 <% if logged_in? %>
-    <%= link_to 'Log out', logout_path, method: "delete" %>
+    <%= link_to 'Log out', logout_path, method: "delete" %> |
 <% end %>
+
+<%= link_to 'Home', root_path %> |
+<%= link_to 'Log in', login_path %> |
+<%= link_to 'Modules', modules_path%>
