--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -58,5 +58,28 @@
   <%= m.nil? ? "" : m.name %>
 </p>
 <%end%>
+<% end %>
 
+
+<% if logged_as_lecturer?%>
+<% @lecturer = Lecturer.find_by(user_id: @user.id) %>
+<% if @lecturer %>
+<p>
+  <strong>Module 1 :</strong>
+  <% m = Modulecourse.find_by(id: @lecturer.module_course_id_1)%>
+  <%= m.nil? ? "" : m.name %>
+</p>
+
+<p>
+  <strong>Module 2 :</strong>
+  <% m = Modulecourse.find_by(id: @lecturer.module_course_id_2)%>
+  <%= m.nil? ? "" : m.name %>
+</p>
+
+<p>
+  <strong>Module 3 :</strong>
+  <% m = Modulecourse.find_by(id: @lecturer.module_course_id_3)%>
+  <%= m.nil? ? "" : m.name %>
+</p>
+<%end%>
 <% end %>
