--- a/app/views/modulecourses/index.html.erb
+++ b/app/views/modulecourses/index.html.erb
@@ -1,6 +1,7 @@
-<p id="notice"><%= notice %></p>
-
+<% provide(:title, "Modules") %>
 <h1>Listing Modules</h1>
+
+<p id="notice"><%= notice %></p>
 
 <table>
   <thead>
