--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,62 +24,99 @@
   <%= @user.email %>
 </p>
 
-
 <% if logged_as_student? or logged_as_lecturer? or logged_as_programadmin?%>
 
-<% if @student %>
-<p>
-  <strong>Module 1 :</strong>
-  <% m = Modulecourse.find_by(id: @student.module_course_id_1)%>
-  <%= m.nil? ? "" : m.name %>
-</p>
-
-<p>
-  <strong>Module 2 :</strong>
-  <% m = Modulecourse.find_by(id: @student.module_course_id_2)%>
-  <%= m.nil? ? "" : m.name %>
-</p>
-
-<p>
-  <strong>Module 3 :</strong>
-  <% m = Modulecourse.find_by(id: @student.module_course_id_3)%>
-  <%= m.nil? ? "" : m.name %>
-</p>
-
-<p>
-  <strong>Module 4 :</strong>
-  <% m = Modulecourse.find_by(id: @student.module_course_id_4)%>
-  <%= m.nil? ? "" : m.name %>
-</p>
-
-<p>
-  <strong>Module 5 :</strong>
-  <% m = Modulecourse.find_by(id: @student.module_course_id_5)%>
-  <%= m.nil? ? "" : m.name %>
-</p>
+  <% if @student %>
+    <% if !hasenoughmodule?(@student.user_id) %>
+      <p>You need to subscribe to more module. You cannot validate your semester</p>  
+    <%end%>
+    
+  <% if validatesemester?(@student.user_id)%>
+    <p> Semester : <%= @overall %></p>
+  <%end%>
+  <%end%>
 <%end%>
+
+<table>
+  <thead>
+    <tr>
+      <th>Module</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+<% if logged_as_student? or logged_as_lecturer? or logged_as_programadmin?%>
+
+  <% if @student %>
+  <% m = Modulecourse.find_by(id: @student.module_course_id_1)%>
+  <%if m %>
+    <tr>
+      <td><%= m.nil? ? "" : m.name %></td>
+      <% findgrade(@student.user_id, m.id) %>
+      <td><%= @fgrade.nil? ? "No grade yet" :  @fgrade.grade.to_s + "/100"%></td>
+    </tr>
+  <%end%>
+    
+    
+     <% m = Modulecourse.find_by(id: @student.module_course_id_2)%>
+     <%if m %>
+    <tr>
+      <td><%= m.nil? ? "" : m.name %></td>
+      <% findgrade(@student.user_id, m.id) %>
+      <td><%= @fgrade.nil? ? "No grade yet" :  @fgrade.grade.to_s + "/100"%></td>
+    </tr>
+    <%end %>
+  
+  <% m = Modulecourse.find_by(id: @student.module_course_id_3)%>
+  <%if m %>
+    <tr>
+      <td><%= m.nil? ? "" : m.name %></td>
+      <% findgrade(@student.user_id, m.id) %>
+      <td><%= @fgrade.nil? ? "No grade yet" :  @fgrade.grade.to_s + "/100"%></td>
+    </tr>
+  <%end%>
+  
+  <% m = Modulecourse.find_by(id: @student.module_course_id_4)%>
+  <%if m %>
+    <tr>
+      <td><%= m.nil? ? "" : m.name %></td>
+      <% findgrade(@student.user_id, m.id) %>
+      <td><%= @fgrade.nil? ? "No grade yet" :  @fgrade.grade.to_s + "/100"%></td>
+    </tr>
+    <%end%>
+  
+  <% m = Modulecourse.find_by(id: @student.module_course_id_5)%>
+  <%if m %>
+    <tr>
+      <td><%= m.nil? ? "" : m.name %></td>
+      <% findgrade(@student.user_id, m.id) %>
+      <td><%= @fgrade.nil? ? "No grade yet" :  @fgrade.grade.to_s + "/100"%></td>
+    </tr>
+    <%end%>
+  <% end %>
 <% end %>
 
 
 <% if logged_as_lecturer?%>
-<% @lecturer = Lecturer.find_by(user_id: @user.id) %>
-<% if @lecturer %>
-<p>
-  <strong>Module 1 :</strong>
-  <% m = Modulecourse.find_by(id: @lecturer.module_course_id_1)%>
-  <%= m.nil? ? "" : m.name %>
-</p>
-
-<p>
-  <strong>Module 2 :</strong>
-  <% m = Modulecourse.find_by(id: @lecturer.module_course_id_2)%>
-  <%= m.nil? ? "" : m.name %>
-</p>
-
-<p>
-  <strong>Module 3 :</strong>
-  <% m = Modulecourse.find_by(id: @lecturer.module_course_id_3)%>
-  <%= m.nil? ? "" : m.name %>
-</p>
-<%end%>
+  <% @lecturer = Lecturer.find_by(user_id: @user.id) %>
+  <% if @lecturer %>
+    <tr>
+    <% m = Modulecourse.find_by(id: @lecturer.module_course_id_1)%>
+    <td><%= m.nil? ? "" : m.name %></td>
+    <td><%= link_to "Set grades", setgradetostudent_path("module_id" => m.id) %></td>
+    </tr>
+    
+    <tr>
+    <% m = Modulecourse.find_by(id: @lecturer.module_course_id_2)%>
+    <td><%= m.nil? ? "" : m.name %></td>
+    <td><%= link_to "Set grades", setgradetostudent_path("module_id" => m.id) %></td>
+    </tr>
+    
+    <tr>
+    <% m = Modulecourse.find_by(id: @lecturer.module_course_id_3)%>
+    <td><%= m.nil? ? "" : m.name %></td>
+    <td><%= link_to "Set grades", setgradetostudent_path("module_id" => m.id) %></td>
+    </tr>
+  <% end %>
 <% end %>
+
+</table>
