fix bug with form grades

--- a/app/views/grades/setgradetostudent.html.erb
+++ b/app/views/grades/setgradetostudent.html.erb
@@ -18,23 +18,25 @@
       <tr>
         <td><%= User.find_by(id: s.user_id).name %></td>
         <%if findgrade(s.user_id, @modulecourse.id) %>
-        
+          <td>
           <%= form_for @grade, url: {action: "update"} do |f| %>
             <%= f.hidden_field(:id, :value =>  @fgrade.id) %>
             <%= f.hidden_field(:user_id, :value => s.user_id) %>
             <%= f.hidden_field(:module_course_id, :value => @modulecourse.id) %>
-            <td><%=f.text_field(:grade, :value => @fgrade.grade)%></td>
-            <td><%= f.submit("Update grade") %></td>
+            <%=f.text_field(:grade, :value => @fgrade.grade)%>
+            <%= f.submit("Update grade") %>
           <% end %>
-        
+        </td>
         <% else %>
         
-          <%= form_for @grade, url: {action: "create"} do |f| %>
-            <%= f.hidden_field(:user_id, :value => s.user_id) %>
-            <%= f.hidden_field(:module_course_id, :value => @modulecourse.id) %>
-            <td><%=f.text_field(:grade)%></td>
-            <td><%= f.submit("Set grade") %></td>
-          <% end %>
+          <td>
+            <%= form_for @grade, url: {action: "create"} do |f| %>
+              <%= f.hidden_field(:user_id, :value => s.user_id) %>
+              <%= f.hidden_field(:module_course_id, :value => @modulecourse.id) %>
+              <%=f.text_field(:grade)%>
+              <%= f.submit("Set grade") %>
+            <% end %>
+          </td>
           
         <% end %>
       </tr>
