--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,7 +26,7 @@
 
 <% if logged_as_student? or logged_as_lecturer? or logged_as_programadmin?%>
 
-  <% if @student %>
+  <% if @student and logged_as_student? %>
     <% if !hasenoughmodule?(@student.user_id) %>
       <p>You need to subscribe to more module. You cannot validate your semester</p>  
     <%end%>
@@ -99,23 +99,27 @@
 <% if logged_as_lecturer?%>
   <% @lecturer = Lecturer.find_by(user_id: @user.id) %>
   <% if @lecturer %>
+  <% m = Modulecourse.find_by(id: @lecturer.module_course_id_1)%>
+  <%if m %>
     <tr>
-    <% m = Modulecourse.find_by(id: @lecturer.module_course_id_1)%>
     <td><%= m.nil? ? "" : m.name %></td>
     <td><%= link_to "Set grades", setgradetostudent_path("module_id" => m.id) %></td>
     </tr>
-    
+  <% end %>
+  <% m = Modulecourse.find_by(id: @lecturer.module_course_id_2)%>
+  <%if m %>
     <tr>
-    <% m = Modulecourse.find_by(id: @lecturer.module_course_id_2)%>
     <td><%= m.nil? ? "" : m.name %></td>
     <td><%= link_to "Set grades", setgradetostudent_path("module_id" => m.id) %></td>
     </tr>
-    
+  <% end %>
+  <% m = Modulecourse.find_by(id: @lecturer.module_course_id_3)%>
+  <%if m %>
     <tr>
-    <% m = Modulecourse.find_by(id: @lecturer.module_course_id_3)%>
     <td><%= m.nil? ? "" : m.name %></td>
     <td><%= link_to "Set grades", setgradetostudent_path("module_id" => m.id) %></td>
     </tr>
+  <% end %>
   <% end %>
 <% end %>
 
