--- a/app/views/modulecourses/index.html.erb
+++ b/app/views/modulecourses/index.html.erb
@@ -16,35 +16,38 @@
 
     <% @modulecourses.each do |m| %>
       <tr>
-         <% program = Program.find_by(id: m.program_id) %>
-        <td><%= program.name %></td>
-        <td><%= m.name %></td>
-        <% if logged_as_student? %>
-        <td><%=program.inscription_limit%></td>
-        <% if canstudentenroll?(program.id) %>
-          <% if !is_enrolled?(m)%>
-            <td><%= link_to "Enroll", addmodtostudent_path("id" => m) %></td>
-          <% else %>
-            <td><%= link_to "Withdraw", withdrawmodulestudent_path("id" => m) %></td>
+        <% program = Program.find_by(id: m.program_id) %>
+        <% if program %>
+          <td><%= program.name %></td>
+          <td><%= m.name %></td>
+          <% if logged_as_student? %>
+          <td><%=program.inscription_limit%></td>
+          <% if canstudentenroll?(program.id) %>
+            <% if !is_enrolled?(m)%>
+              <td><%= link_to "Enroll", addmodtostudent_path("id" => m) %></td>
+            <% else %>
+              <td><%= link_to "Withdraw", withdrawmodulestudent_path("id" => m) %></td>
+            <% end %>
+            <%end%>
           <% end %>
-          <%end%>
-        <% end %>
-        
-        <% if logged_as_moduleadmin? %>
-          <% if find_lecturer_link_to_module(m.id).nil? %>
-            <%= form_tag({controller: "modulecourses", action: "addmodtolecturer"}, method: "get") do%>
-            <%= hidden_field_tag(:module_id, m.id) %>
-            <td><%= select_tag("lecturer", options_for_select(@lecturers.collect{ |l| [l.name, l.id] }),:onchange => "this.form.submit();", prompt: "Select a lecturer" )%></td>
-            <% end %>
-          <%else%>
-            <% lecturer_selected = find_lecturer_link_to_module(m.id) %>
-            <%= form_tag({controller: "modulecourses", action: "addmodtolecturer"}, method: "get") do%>
-            <%= hidden_field_tag(:module_id, m.id) %>
-            <td><%= select_tag("lecturer", options_for_select(@lecturers.collect{ |l| [l.name, l.id] }, selected: lecturer_selected.id),:onchange => "this.form.submit();", prompt: "Select a lecturer" )%></td>
-            <% end %>
-          <%end%>
-        <% end %>
-        
+          
+          <% if logged_as_moduleadmin? %>
+          <td>
+            <% if find_lecturer_link_to_module(m.id).nil? %>
+              <%= form_tag({controller: "modulecourses", action: "addmodtolecturer"}, method: "get") do%>
+              <%= hidden_field_tag(:module_id, m.id) %>
+              <%= select_tag("lecturer", options_for_select(@lecturers.collect{ |l| [l.name, l.id] }),:onchange => "this.form.submit();", prompt: "Select a lecturer" )%>
+              <% end %>
+            <%else%>
+              <% lecturer_selected = find_lecturer_link_to_module(m.id) %>
+              <%= form_tag({controller: "modulecourses", action: "addmodtolecturer"}, method: "get") do%>
+              <%= hidden_field_tag(:module_id, m.id) %>
+              <%= select_tag("lecturer", options_for_select(@lecturers.collect{ |l| [l.name, l.id] }, selected: lecturer_selected.id),:onchange => "this.form.submit();", prompt: "Select a lecturer" )%>
+              <% end %>
+              </td>
+            <%end%>
+          <% end %>
+        <%end%>
       </tr>
     <% end %>
 </table>
