--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+<div class="center jumbotron">
+  <p id="notice"><%= notice %></p>
 
 <h1>Listing Users</h1>
 
@@ -31,3 +32,4 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+<div class="center jumbotron">
